--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
   <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <meta name="description" content="An app to track purchase information with urls">
+  <link rel="manifest" href="./manifest.json">
+  <link rel="icon" href="./assets/icons/todo_icon.png">
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -45,6 +48,7 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src='./db.js'></script>
   <script src="./assets/js/app.js"></script>
 </body>
 
